--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Update Gradle Wrapper
         uses: gradle-update/update-gradle-wrapper-action@v2
